# DecisionTree

./: CMakeLists.txt  CMakeLists.txt.user.5b53c19  README.md
include/: abstractdescriptor.h  categoricaldescriptor.h  continuousdescriptor.h  decisiontree.h  pool.h
src/: abstractdescriptor.cpp  categoricaldescriptor.cpp  continuousdescriptor.cpp  decisiontree.cpp  main.cpp  pool.cpp
